# Chess_CPP

./: .gitignore  CMakeLists.txt  README.md
build-web/: .ninja_deps  .ninja_log  CMakeCache.txt  Chess.html  Chess.js  build.ninja  chess.data  chess.wasm  cmake_install.cmake
include/: AI.h  Board.h  GUI.h  Game.h  Move.h  MoveGenerator.h  Piece.h
src/: AI.cpp  Board.cpp  GUI.cpp  Game.cpp  MoveGenerator.cpp  main.cpp
web/: shell.html
